changed some colors and fonts

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     body {
       background-color: #f4f4f4;
-      color: #333;
+      color: #222;
     }
 
     header {
       background: url('https://images.unsplash.com/photo-1542314831-068cd1dbfeeb') no-repeat center center/cover;
-      height: 300px;
+      height: 400px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -32,7 +32,7 @@
     }
 
     nav {
-      background-color: #222;
+      background-color: #333;
       padding: 10px;
       text-align: center;
     }
@@ -54,7 +54,7 @@
 
     .rooms {
       display: flex;
-      gap: 20px;
+      gap: 30px;
       flex-wrap: wrap;
       justify-content: center;
     }
@@ -84,7 +84,7 @@
 
     form {
       background-color: white;
-      padding: 20px;
+      padding: 30px;
       max-width: 500px;
       margin: 30px auto;
       border-radius: 10px;
@@ -97,25 +97,25 @@
 
     form input, form select {
       width: 100%;
-      padding: 10px;
-      margin-top: 10px;
+      padding: 20px;
+      margin-top: 15px;
       margin-bottom: 15px;
       border: 1px solid #ccc;
       border-radius: 5px;
     }
 
     form button {
-      background-color: #f8b400;
-      padding: 10px 15px;
+      background-color: #f7b400;
+      padding: 10px 20px;
       border: none;
       border-radius: 5px;
       color: white;
-      font-weight: bold;
+      font-weight: italic;
       cursor: pointer;
     }
 
     form button:hover {
-      background-color: #d98e00;
+      background-color: #d56e00;
     }
 
     footer {
