changed background colour and font size

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Hotel Royal Stay</title>
   <style>
     * {
-      margin: 0;
+      margin:0;
       padding: 0;
       box-sizing: border-box;
       font-family: "Segoe UI", sans-serif;
@@ -23,23 +23,23 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      color: white;
-      text-shadow: 2px 2px 4px #000;
+      color: black;
+      text-shadow: 4px 4px 6px #000;
     }
 
     header h1 {
-      font-size: 3em;
+      font-size: 6em;
     }
 
     nav {
-      background-color: #333;
-      padding: 10px;
+      background-color: #222;
+      padding: 12px;
       text-align: center;
     }
 
     nav a {
       color: white;
-      margin: 0 15px;
+      margin: 0 16px;
       text-decoration: none;
       font-weight: bold;
     }
@@ -120,9 +120,9 @@
 
     footer {
       text-align: center;
-      padding: 20px;
-      background: #222;
-      color: white;
+      padding: 30px;
+      background: #555;
+      color: blue;
     }
   </style>
 </head>
