changed footers padding and backgrond

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 
     footer {
       text-align: center;
-      padding: 30px;
-      background: #555;
-      color: blue;
+      padding: 40px;
+      background: #666;
+      color: black;
     }
   </style>
 </head>
